--- a/Exercicio-A/src/Makefile
+++ b/Exercicio-A/src/Makefile
@@ -178,12 +178,12 @@ ETAGS = etags
 CTAGS = ctags
 am__DIST_COMMON = $(srcdir)/Makefile.in $(top_srcdir)/depcomp
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
-ACLOCAL = ${SHELL} /home/ubuntu/TP-2/EXE1/missing aclocal-1.15
+ACLOCAL = ${SHELL} /home/ubuntu/TP2/Exercicio-A/missing aclocal-1.15
 AMTAR = $${TAR-tar}
 AM_DEFAULT_VERBOSITY = 1
-AUTOCONF = ${SHELL} /home/ubuntu/TP-2/EXE1/missing autoconf
-AUTOHEADER = ${SHELL} /home/ubuntu/TP-2/EXE1/missing autoheader
-AUTOMAKE = ${SHELL} /home/ubuntu/TP-2/EXE1/missing automake-1.15
+AUTOCONF = ${SHELL} /home/ubuntu/TP2/Exercicio-A/missing autoconf
+AUTOHEADER = ${SHELL} /home/ubuntu/TP2/Exercicio-A/missing autoheader
+AUTOMAKE = ${SHELL} /home/ubuntu/TP2/Exercicio-A/missing automake-1.15
 AWK = gawk
 CC = gcc
 CCDEPMODE = depmode=gcc3
@@ -212,7 +212,7 @@ LDFLAGS =
 LIBOBJS = 
 LIBS = 
 LTLIBOBJS = 
-MAKEINFO = ${SHELL} /home/ubuntu/TP-2/EXE1/missing makeinfo
+MAKEINFO = ${SHELL} /home/ubuntu/TP2/Exercicio-A/missing makeinfo
 MKDIR_P = /bin/mkdir -p
 OBJEXT = o
 PACKAGE = sourdough
@@ -229,10 +229,10 @@ SET_MAKE =
 SHELL = /bin/bash
 STRIP = 
 VERSION = 0.01
-abs_builddir = /home/ubuntu/TP-2/EXE1/src
-abs_srcdir = /home/ubuntu/TP-2/EXE1/src
-abs_top_builddir = /home/ubuntu/TP-2/EXE1
-abs_top_srcdir = /home/ubuntu/TP-2/EXE1
+abs_builddir = /home/ubuntu/TP2/Exercicio-A/src
+abs_srcdir = /home/ubuntu/TP2/Exercicio-A/src
+abs_top_builddir = /home/ubuntu/TP2/Exercicio-A
+abs_top_srcdir = /home/ubuntu/TP2/Exercicio-A
 ac_ct_CC = gcc
 ac_ct_CXX = g++
 am__include = include
@@ -252,7 +252,7 @@ host_alias =
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /home/ubuntu/TP-2/EXE1/install-sh
+install_sh = ${SHELL} /home/ubuntu/TP2/Exercicio-A/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
